feat(en): remove legacy JS from homepage; add home SCSS; import in main.scss

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,5 +7,6 @@
 @use 'components/header';
 @use 'components/footer';
 @use 'components/hero';
+@use 'components/home';
 @use 'components/card';
 @use 'utilities/utilities';
